[package]
name = "render-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.8" }
anyhow = { version = "1.0.95" }
log = { version = "0.4.25" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4.0" }
wgpu = { version = "23.0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
wgpu = { version = "23.0.1", features = ["webgl"] }

[lib]
crate-type = ["cdylib", "rlib"]